@@ -1,6 +1,6 @@
 <?php
-// $Id: views_argument_validator.test,v 1.1.2.2 2010-03-14 12:14:34 dereine Exp $
-module_load_include('inc', 'views', 'tests/views_query');
+// $Id: views_argument_validator.test,v 1.1.2.3 2010-04-16 22:11:07 dereine Exp $
+module_load_include('test', 'views', 'tests/views_query');
 
 class viewsArgumentValidatorTest extends ViewsSqlTest {
   function getInfo() {
