@@ -1,6 +1,6 @@
 <?php
-// $Id: views_basic.test,v 1.1.2.1 2009-12-22 00:38:02 merlinofchaos Exp $
-module_load_include('inc', 'views', 'tests/views_query');
+// $Id: views_basic.test,v 1.1.2.2 2010-04-16 22:11:07 dereine Exp $
+module_load_include('test', 'views', 'tests/views_query');
 
 /**
  * Basic test class for Views query builder tests.
