@@ -1,7 +1,7 @@
 <?php
-// $Id: views_groupby.test,v 1.1.2.3 2010-02-06 10:52:05 dereine Exp $
+// $Id: views_groupby.test,v 1.1.2.4 2010-04-16 22:11:07 dereine Exp $
 
-module_load_include('inc', 'views', 'tests/views_query');
+module_load_include('test', 'views', 'tests/views_query');
 
 class ViewsQueryGroupByTest extends ViewsSqlTest {
   public static function getInfo() {
